@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<links>
+  <set target="*">
+      <link name="Developer Guide">https://docs.aws.amazon.com/comprehend/latest/dg/</link>
+  </set>
+</links>
