@@ -55,6 +55,7 @@
     <PackageReference Include="AWSSDK.AutoScalingPlans" Version="3.3.2.1" />
     <PackageReference Include="AWSSDK.Chime" Version="3.3.1.4" />
     <PackageReference Include="AWSSDK.CognitoSync" Version="3.3.1.63" />
+    <PackageReference Include="AWSSDK.ComprehendMedical" Version="3.3.0.1" />
     <PackageReference Include="AWSSDK.Connect" Version="3.3.3.20" />
     <PackageReference Include="AWSSDK.DataSync" Version="3.3.0.1" />
     <PackageReference Include="AWSSDK.DLM" Version="3.3.1.6" />
