@@ -25,6 +25,8 @@
     * Added cmdlets to support the AWS App Mesh service. AWS App Mesh makes it easy to monitor and control microservices running on AWS. Cmdlets for the service have the noun prefix AMSH and can be listed using the command 'Get-AWSCmdletName -Service AMSH'.
   * AWS Auto Scaling Plans
     * Added cmdlets to support AWS Auto Scaling Plans. Use AWS Auto Scaling to quickly discover all the scalable AWS resources for your application and configure dynamic scaling and predictive scaling for your resources using scaling plans. Cmdlets for the service have the noun prefix ASP and can be listed using the command 'Get-AWSCmdletName -Service ASP'.
+  * AWS Comprehend Medical
+	* Added support for AWS Comprehend Medical. Comprehend Medical extracts structured information from unstructured clinical text. Use these actions to gain insight in your documents. Cmdlets for the service have the noun prefix CMPM and can be listed using the command 'Get-AWSCmdletName -Service CMPM'.
   * AWS DataSync
     * Added cmdlets to support the AWS DataSync service. AWS DataSync is a managed data transfer service that makes it simpler for you to automate moving data between on-premises storage and Amazon Simple Storage Service (Amazon S3) or Amazon Elastic File System (Amazon EFS). Cmdlets for the service have the noun prefix DSYN and can be listed using the command 'Get-AWSCmdletName -Service DSYN'.
   * AWS Elemental MediaConnect
